# ImageEdit

./: ImageEdit.sln  ImageServer.sln  README.md
ImageEdit/: App.xaml  App.xaml.cs  Cmd.cs  ConnectPipe.cs  ImageEdit.csproj  ImageOpPipe.cs  MainWindow.xaml  MainWindow.xaml.cs
ImageEdit/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ImageEdit/Style/: Style.xaml
ImageServer/: BaseOperate.cpp  BaseOperate.h  Command.h  ConnectPipe.cpp  ConnectPipe.h  ImageServer.sln  ImageServer.vcxproj  ImageServer.vcxproj.filters  MainOperate.cpp  MainOperate.h  MemoryMap.cpp  MemoryMap.h  StringUtils.cpp  StringUtils.h  main.cpp
ImageServer/x64/Debug/: vc142.idb
ImageServer/x64/Debug/ImageServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ImageServer.lastbuildstate  ImageServer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Qt/ImageEdit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
